# panmuphle

./: .panmuphled.json  Makefile  README.md  pyproject.toml
panmuphlectl/: main.py
panmuphled/: main.py
panmuphled/display/: application.py  common.py  controller.py  selector.py  window.py  workspace.py
panmuphled/server/: file_manager.py  parser.py  server.py
